--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <img src="famous-touch-logo.png" alt="Famous Touch Logo">
         </div>
         <h1>Famous Touch</h1>
-        <p><strong>Premium Home & Hotel Massage</strong></p>
+        <p><strong>24/7 Premium Home & Hotel Massage</strong></p>
         <div class="areas">Serving: Pasay • Makati • BGC • Malate • Pasig • Parañaque</div>
     </header>
 
