--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Famous Touch | 24/7 Home & Hotel Massage Metro Manila</title>
     
     <style>
@@ -39,7 +38,7 @@
         .container {
             width: 100%;
             max-width: 480px; 
-            padding: 20px;
+            padding: 20px 20px 80px; /* Added bottom padding for footer spacing */
             text-align: center;
             position: relative;
         }
@@ -65,6 +64,7 @@
         .hero p { font-size: 17px; margin-bottom: 5px; color: #ffffff; text-shadow: 1px 1px 4px rgba(0,0,0,0.8); }
         .areas { font-size: 14px; margin: 10px 0; color: var(--primary); font-weight: bold; text-shadow: 1px 1px 2px rgba(0,0,0,0.9); text-transform: uppercase; }
 
+        /* SEMI-TRANSPARENT GLASS STYLE PRESERVED */
         .section, .call-now-section {
             background: rgba(255, 255, 255, 0.45);
             backdrop-filter: blur(12px);
@@ -132,7 +132,6 @@
         .service-item { display: flex; align-items: center; gap: 8px; font-size: 15px; }
         .check { color: #000; font-weight: 900; font-size: 18px; }
 
-        /* SLIDESHOW & CAPTIONS */
         .service-slideshow {
             position: relative;
             margin: 16px 0;
@@ -185,16 +184,24 @@
         .slide-dots span { width: 10px; height: 10px; background: rgba(255, 255, 255, .4); border-radius: 50%; border: 1px solid #000; }
         .slide-dots span.active { background: var(--primary); transform: scale(1.2); }
 
+        /* UPDATED PROMISE LIST STYLES */
         .custom-list ul {
             text-align: left;
             padding-left: 0;
             list-style: none;
             color: #000;
-            font-size: 15px;
             margin: 0;
         }
-        .custom-list li { display: flex; gap: 12px; margin-bottom: 15px; align-items: flex-start; font-weight: 600; }
-        .custom-list svg { flex-shrink: 0; margin-top: 2px; filter: drop-shadow(0px 1px 1px rgba(0,0,0,0.2)); }
+        .custom-list li { 
+            display: flex; 
+            gap: 12px; 
+            margin-bottom: 18px; 
+            align-items: flex-start; 
+        }
+        .promise-content { display: flex; flex-direction: column; }
+        .promise-title { font-weight: 800; font-size: 16px; margin-bottom: 2px; }
+        .promise-sub { font-weight: 500; font-size: 14px; opacity: 0.9; line-height: 1.3; }
+        .custom-list svg { flex-shrink: 0; margin-top: 3px; }
 
         .testimonial-marquee { overflow: hidden; width: 100%; padding: 12px 0; }
         .testimonial-track { display: flex; gap: 15px; animation: scroll 15s linear infinite; }
@@ -212,6 +219,28 @@
         }
         .stars { color: #ff9900; font-size: 16px; }
         @keyframes scroll { 0% { transform: translateX(0); } 100% { transform: translateX(-50%); } }
+
+        /* FOOTER STYLES */
+        .main-footer {
+            margin-top: 10px;
+            padding: 20px 10px;
+            color: #ffffff;
+            font-size: 13px;
+        }
+        .footer-line {
+            height: 1px;
+            background: linear-gradient(90deg, transparent, var(--primary), transparent);
+            margin-bottom: 15px;
+        }
+        .service-area-footer {
+            margin: 10px 0;
+            color: var(--primary);
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 5px;
+        }
 
         .floating-btns { position: fixed; bottom: 20px; right: 20px; display: flex; flex-direction: column; gap: 15px; z-index: 999; }
         .floating-btns a { width: 65px; height: 65px; border-radius: 50%; display: flex; align-items: center; justify-content: center; box-shadow:0 6px 15px rgba(0,0,0,.4); transition: transform 0.3s; }
@@ -262,6 +291,54 @@
         </div>
     </section>
 
+    <section class="section custom-list">
+        <h2>Our Promise</h2>
+        <ul>
+            <li>
+                <svg width="20" height="20" fill="#e91e63" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
+                <div class="promise-content">
+                    <span class="promise-title">Professional & Certified Therapists</span>
+                    <span class="promise-sub">Respectful, trained, and focused on your comfort and safety.</span>
+                </div>
+            </li>
+            <li>
+                <svg width="20" height="20" fill="#e91e63" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
+                <div class="promise-content">
+                    <span class="promise-title">Truly 24/7 Availability</span>
+                    <span class="promise-sub">Late-night stress relief? Early morning recovery? We come to you anytime.</span>
+                </div>
+            </li>
+            <li>
+                <svg width="20" height="20" fill="#e91e63" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
+                <div class="promise-content">
+                    <span class="promise-title">Wide Range of Expert Techniques</span>
+                    <span class="promise-sub">Swedish, Deep Tissue, Thai, Combination, Foot, Twin & more.</span>
+                </div>
+            </li>
+            <li>
+                <svg width="20" height="20" fill="#e91e63" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
+                <div class="promise-content">
+                    <span class="promise-title">Fast Relief from Pain & Tension</span>
+                    <span class="promise-sub">Say goodbye to back/neck pain, jet lag, or daily stress.</span>
+                </div>
+            </li>
+            <li>
+                <svg width="20" height="20" fill="#e91e63" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
+                <div class="promise-content">
+                    <span class="promise-title">Private & Professional Service</span>
+                    <span class="promise-sub">No crowded spas, no awkward waiting — total privacy in your room.</span>
+                </div>
+            </li>
+            <li>
+                <svg width="20" height="20" fill="#e91e63" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
+                <div class="promise-content">
+                    <span class="promise-title">Perfect for Solo or Shared Sessions</span>
+                    <span class="promise-sub">Enjoy alone or book Twin Massage for double the relaxation.</span>
+                </div>
+            </li>
+        </ul>
+    </section>
+
     <section class="section">
         <h2>Service Gallery</h2>
         <div class="service-slideshow">
@@ -288,24 +365,6 @@
         </div>
     </section>
 
-    <section class="section custom-list">
-        <h2>Our Promise</h2>
-        <ul>
-            <li>
-                <svg width="24" height="24" fill="var(--accent)" viewBox="0 0 24 24"><path d="M12 2C8.13 2 5 5.13 5 9C5 14.25 12 22 12 22C12 22 19 14.25 19 9C19 5.13 15.87 2 12 2ZM12 11.5C10.62 11.5 9.5 10.38 9.5 9C9.5 7.62 10.62 6.5 12 6.5C13.38 6.5 14.5 7.62 14.5 9C14.5 10.38 13.38 11.5 12 11.5Z"/></svg>
-                <span>Trusted by luxury hotels and condos across the Metro.</span>
-            </li>
-            <li>
-                <svg width="24" height="24" fill="var(--accent)" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
-                <span>Licensed, polite, and expert professional therapists.</span>
-            </li>
-            <li>
-                <svg width="24" height="24" fill="var(--accent)" viewBox="0 0 24 24"><path d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm1-11V7h-2v6l5.25 3.15.75-1.23-4-2.42z"/></svg>
-                <span>Available 24/7. Relaxation when you need it most.</span>
-            </li>
-        </ul>
-    </section>
-
     <section class="section">
         <h2>Client Feedback</h2>
         <div class="testimonial-marquee">
@@ -319,6 +378,20 @@
             </div>
         </div>
     </section>
+
+    <footer class="main-footer">
+        <div class="footer-line"></div>
+        <p><strong>FAMOUS TOUCH MASSAGE SERVICES</strong></p>
+        <div class="service-area-footer">
+            <svg width="14" height="14" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/></svg>
+            SERVICE AREA: METRO MANILA
+        </div>
+        <p style="opacity: 0.8; margin-top: 5px;">Pasay • Makati • BGC • Malate • Pasig • Parañaque</p>
+        <p style="margin-top: 10px;">Available 24 Hours / 7 Days a Week</p>
+        <div style="opacity: 0.5; font-size: 11px; margin-top: 15px; letter-spacing: 1px;">
+            © 2026 FAMOUS TOUCH. ALL RIGHTS RESERVED.
+        </div>
+    </footer>
 
 </div>
 
@@ -340,7 +413,6 @@
         dots[currentIndex].classList.add('active');
     }
 
-    // Rotates every 4 seconds
     setInterval(nextSlide, 4000);
 </script>
 
