--- a/index.html
+++ b/index.html
@@ -3,7 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Famous Touch | 24/7 Home & Hotel Massage Metro Manila</title>
+    
+    <title>Famous Touch | 24/7 Home & Hotel Massage Makati, Pasay, BGC</title>
+    <meta name="description" content="Famous Touch provides premium 24/7 home and hotel massage services in Makati, Pasay, BGC, Malate, and across Metro Manila. Professional, certified therapists delivered to your door.">
+    <meta name="keywords" content="massage makati, massage pasay, home service massage manila, hotel massage bgc, 24 hour massage malate, massage parañaque, massage pasig">
+    <link rel="canonical" href="https://yourdomain.com/" />
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "HealthAndBeautyBusiness",
+      "name": "Famous Touch Massage Services",
+      "image": "https://yourdomain.com/famous-touch-logo.png",
+      "@id": "",
+      "url": "https://yourdomain.com/",
+      "telephone": "+639466266795",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Metro Manila",
+        "addressLocality": "Makati",
+        "addressRegion": "NCR",
+        "postalCode": "1200",
+        "addressCountry": "PH"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 14.5547,
+        "longitude": 121.0244
+      },
+      "servesCuisine": "",
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday",
+          "Saturday",
+          "Sunday"
+        ],
+        "opens": "00:00",
+        "closes": "23:59"
+      },
+      "areaServed": [
+        {"@type": "City", "name": "Makati"},
+        {"@type": "City", "name": "Pasay"},
+        {"@type": "City", "name": "BGC"},
+        {"@type": "City", "name": "Malate"},
+        {"@type": "City", "name": "Pasig"},
+        {"@type": "City", "name": "Parañaque"}
+      ]
+    }
+    </script>
     
     <style>
         :root {
@@ -185,7 +237,6 @@
             object-fit: cover;
         }
 
-        /* THE MISSING OVERLAY LOGO STYLE */
         .slide-logo {
             position: absolute;
             top: 15px;
@@ -341,7 +392,7 @@
     </div>
 
     <section class="section">
-        <h2>Available Services</h2>
+        <h2>Massage Services in Makati, Pasay & BGC</h2>
         <div class="services-grid">
             <div class="service-item"><span class="check">✔</span> Swedish Massage</div>
             <div class="service-item"><span class="check">✔</span> Deep Tissue</div>
