--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <title>Famous Touch | 24/7 Home & Hotel Massage Makati, Pasay, BGC</title>
     <meta name="description" content="Famous Touch provides premium 24/7 home and hotel massage services in Makati, Pasay, BGC, Malate, and across Metro Manila. Professional, certified therapists delivered to your door.">
     <meta name="keywords" content="massage makati, massage pasay, home service massage manila, hotel massage bgc, 24 hour massage malate, massage parañaque, massage pasig">
-    <link rel="canonical" href="https://yourdomain.com/" />
+    
+    <link rel="canonical" href="https://www.famous-touch.com/" />
 
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "HealthAndBeautyBusiness",
       "name": "Famous Touch Massage Services",
-      "image": "https://yourdomain.com/famous-touch-logo.png",
-      "@id": "",
-      "url": "https://yourdomain.com/",
+      "image": "https://www.famous-touch.com/famous-touch-logo.png",
+      "@id": "https://www.famous-touch.com/",
+      "url": "https://www.famous-touch.com/",
       "telephone": "+639466266795",
       "address": {
         "@type": "PostalAddress",
@@ -31,17 +32,10 @@
         "latitude": 14.5547,
         "longitude": 121.0244
       },
-      "servesCuisine": "",
       "openingHoursSpecification": {
         "@type": "OpeningHoursSpecification",
         "dayOfWeek": [
-          "Monday",
-          "Tuesday",
-          "Wednesday",
-          "Thursday",
-          "Friday",
-          "Saturday",
-          "Sunday"
+          "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"
         ],
         "opens": "00:00",
         "closes": "23:59"
