--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <meta name="google-site-verification" content="xVj3uxcWfu1sfd176MxjiioG-440_qDsYQTsM_rgy7g" />
+
     <title>Famous Touch | 24/7 Home & Hotel Massage Makati, Pasay, BGC</title>
     <meta name="description" content="Famous Touch provides premium 24/7 home and hotel massage services in Makati, Pasay, BGC, Malate, and across Metro Manila. Professional, certified therapists delivered to your door.">
     <meta name="keywords" content="massage makati, massage pasay, home service massage manila, hotel massage bgc, 24 hour massage malate, massage parañaque, massage pasig">
